--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "name": "news-explorer-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Бэкенд для проекта news explorer",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wrongsky1/news-explorer-api.git"
   },
-  "author": "\"Misha Razlivakhin\"",
+  "author": "Misha Razlivakhin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wrongsky1/news-explorer-api/issues"
   },
-  "homepage": "https://github.com/wrongsky1/news-explorer-api#readme"
+  "homepage": "https://github.com/wrongsky1/news-explorer-api#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "celebrate": "^13.0.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "express-winston": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.11",
+    "validator": "^13.1.17"
+  }
 }
